--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "readable-stream": "^2.0.0"
   },
   "devDependencies": {
+    "chai": "^3.0.0",
     "mocha": "^2.1.0"
   },
   "repository": {
